--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,338 @@
  *= require_tree .
  *= require_self
  */
+body {
+	background-color: #397F5F;
+
+}
+
+
+
+
+#trips_img{
+
+    background: url('../images/Trips.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: auto;
+
+}
+
+
+
+
+
+.section h3 {
+    margin: auto;
+    text-align: center;
+    font-style: bold;
+    font-size: 16pt;
+
+}
+
+.section h4 {
+    margin: auto;
+    text-align: center;
+    font-style: bold;
+
+}
+
+.section table {
+    margin:  auto;
+}
+
+.section ul{
+     list-style-type: square;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+h1 {
+    font-family: 'Georgia', Georgia, sans-serif;
+
+}
+
+h2 {
+    font-family: 'Georgia', Georgia, sans-serif;
+    font-style: italic;
+}
+
+
+
+h3 h4 h5 h6 textarea footer .navigation {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.container {
+	padding: 15px;
+	background-color: #72FFBE;
+
+}
+
+
+#main_content img {
+   width: 100%;
+   height: auto;
+}
+
+
+#title {
+	text-align: center;
+}
+
+
+
+#form h3 {
+	text-align: center;
+	font-size: 23pt;
+}
+
+#form label {
+	font-weight: bold;
+}
+
+
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: bold;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #72FFBE;
+    color: black;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: bold;
+}
+
+input[type=submit]:hover {
+    background-color: #72FFBE;
+}
+
+textarea{
+	width: 100%;
+    margin: 8px 0;
+    display: inline-block;
+    font-weight: bold;
+}
+
+#form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 40px;
+}
+
+.footer {
+	text-align: center;
+    font-weight: bold;
+
+}
+
+
+#food {
+    width: 100%;  
+}
+
+#food tr td{
+    border-bottom: 3px solid #c6c5c7;
+    padding: 20px;
+    font-weight: bold;
+    color: black;
+    /*width: 100%;*/
+    font-size: 16pt;
+
+
+    
+}
+
+#index_link {
+    text-align: center;
+}
+
+
+#food img {
+    max-width: 200px;
+    height: auto;
+
+}
+#food td:hover {background-color: #c6c5c7}
+#food a:hover {color: #397F5F}
+#food a {
+    color: #137F4E;
+}
+
+
+a:visited {
+    color: #FF2900;
+}
+
+#trips tr td{
+    border-bottom: 3px solid #c6c5c7;
+    padding: 20px;
+    font-weight: bold;
+    color: black;
+    width: 100%;
+    font-size: 16pt;
+
+    
+}
+
+
+
+
+#trips td:hover {background-color: #c6c5c7}
+#trips a:hover {color: #397F5F}
+#trips a {
+    color: #137F4E;
+}
+
+#meals tr td{
+    border-bottom: 3px solid #c6c5c7;
+    
+    padding: 20px;
+    font-weight: bold;
+    color: black;
+    /*width: 80%;*/
+    font-size: 16pt;
+
+
+
+    
+}
+
+
+.meal_img {
+    width: 100%;
+    height: auto;
+}
+
+.meal_img ul{
+    font-weight: bold;
+    list-style-type: square;
+    
+}
+
+.meal_img h3{
+    text-align: center;
+    font-size: 16pt;
+}
+
+#meals img {
+    max-width: 200px;
+    height: auto;
+
+}
+#meals td:hover {background-color: #c6c5c7}
+#meals a:hover {color: #397F5F}
+#meals a {
+    color: #137F4E;
+}
+
+
+
+ul.navigation {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #72FFBE;
+    color: black;
+    font-weight: bold;
+}
+
+ul.navigation li {float: left;}
+
+ul.navigation li a {
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+ul.navigation li a:hover {
+    background-color: #397F5F;
+    color: #72FFBE;
+}
+
+ul.navigation li.icon {display: none;}
+
+
+
+@media screen and (max-width:680px) {
+  ul.navigation li:not(:first-child) {display: none;}
+  ul.navigation li.icon {
+    float: right;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width:680px) {
+  ul.navigation.responsive {position: relative;}
+  ul.navigation.responsive li.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  ul.navigation.responsive li {
+    float: none;
+    display: inline;
+  }
+  ul.navigation.responsive li a {
+    display: block;
+    text-align: left;
+  }
+
+  a {
+    font-size: 9.5pt;
+
+  }
+
+  .section tr {
+    font-size: 5pt;
+    width: 100%; 
+    text-align: left;
+
+  }
+
+
+h1 {
+    font-family: 'Georgia', Georgia, sans-serif;
+    font-size: 10pt;
+
+}
+
+h2 {
+    font-family: 'Georgia', Georgia, sans-serif;
+    font-style: italic;
+    font-size: 9.5pt;
+}
+
+
+
+footer  {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 9.5pt;
+}
+
+
+}
