--- a/app/views/project_eulers/index.html.erb
+++ b/app/views/project_eulers/index.html.erb
@@ -1,4 +1,7 @@
-<p id="notice"><%= notice %></p>
+
+
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
 <h1>Listing Project Eulers</h1>
 
@@ -19,8 +22,13 @@
         <td><%= project_euler.title %></td>
         <td><%= project_euler.post %></td>
         <td><%= link_to 'Show', project_euler %></td>
-        <td><%= link_to 'Edit', edit_project_euler_path(project_euler) %></td>
-        <td><%= link_to 'Destroy', project_euler, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
+        <% if user_signed_in? %>
+          <td><%= link_to 'Edit', edit_project_euler_path(project_euler) %></td>
+          <td><%= link_to 'Destroy', project_euler, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+        
+        
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +36,28 @@
 
 <br>
 
-<%= link_to 'New Project euler', new_project_euler_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New Project euler', new_project_euler_path %>        
+<% end %>
+
+</div>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<div class="footer">
+    <footer>
+      <h4 class="wrapper">JASONSUTTER</h4>
+      <div>
+    
+        <img src="../images/test.JPG" alt="Footer-Portrait">
+        <p class="wrapper">Jason is an aspiring programmer based out of San Francisco, CA. He is currently attending Devboot Camp we he is focused on development</p>
+        <p class="wrapper"><a href="https://github.com/jasonsutter87"><i class="fa fa-github-square fa-2x"></i></a>     <a href="https://www.linkedin.com/in/jason-sutter-23459b1a"><i class="fa fa-linkedin-square fa-2x"></i></a></p>
+      </div>
+      <p class="Copyright">Copyright Jason Sutter &copy; 2016 - jasonanimation.net</p>
+      <p class="Copyright">CONTENT LICENSED UNDER THE CREATIVE COMMONS <a href="http://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a></p>
+
+      
+    </footer>
+  </div>
+
+ 
