--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,18 +13,136 @@
  *= require_tree .
  *= require_self
  */
+/* Remove margins and padding from the list, and add a black background color */
 body {
-	background-color: #f2f2f2;
+	margin: 0;
+	font:  "Open Sans", Arial, sans-serif
+}
 
+
+.footer {
+  
+	background-color: #2c333b;
+	/*
+  position:absolute;
+  */
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	color: white;
+  list-style-type: none;
+  margin: 0;
+    
+
+
+
+}
+.Copyright{
+	font-size: 10px;
+}
+.wrapper{
+	 display: inline-block;
+    width: 170px;
+    height: auto;
+    margin: 10px;
+    text-align: left;
+    
+}
+
+.container{
+  padding: 15px;
+  padding-left: 75px;
+}
+
+
+.footer img{
+	width: 140px;
+	height: auto; 
+}
+
+
+
+ul.navigation {
+  
+    list-style-type: none;
+    margin: 0;
+    padding: 20;
+  
+    overflow: hidden;
+    background-color: #2c333b; 
+}
+li.title-navigation {
+	font-size: 17px;
+	padding-left: 50px;
+	padding-top: 15px;
+	padding-bottom: 15px; 
+}
+
+li.little-navigation {
+	font-size: 12px;
+	padding: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	color: #aaaaaa; 
 }
 
 
 
 
-@media screen and (max-width:680px) {
-	body {
-		background-color: #f2f2f2;
 
-	}
-  
+
+ul.navigation li {float: left;}
+
+
+ul.navigation li a {
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: 0.3s;
+    
+}
+
+
+ul.navigation li a:hover {
+	color: #aaaaaa;
+	background-color: #2c333b;
+}
+
+
+ul.navigation li.icon {display: none;}
+
+
+
+@media screen and (max-width:680px) {
+  ul.navigation li:not(:first-child) {display: none;}
+  ul.navigation li.icon {
+    float: right;
+    display: inline-block;
+    font-size: 25px;
+    padding-top: 15px;
+  }
+}
+
+
+@media screen and (max-width:680px) {
+  ul.navigation.responsive {position: relative;}
+  ul.navigation.responsive li.icon {
+    
+    position: absolute;
+    right: 0;
+    top: 0;
+    
+
+  }
+  ul.navigation.responsive li {
+    float: none;
+    display: inline;
+  }
+  ul.navigation.responsive li a {
+    display: block;
+    width: auto;
+    text-align: left;
+  }
 }
