--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -14,3 +15,21 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+
+
+<div class="footer">
+    <footer>
+      <h4 class="wrapper">JASONSUTTER</h4>
+      <div>
+    
+        <img src="../images/test.JPG" alt="Footer-Portrait">
+        <p class="wrapper">Jason is an aspiring programmer based out of San Francisco, CA. He is currently attending Devboot Camp we he is focused on development</p>
+        <p class="wrapper"><a href="https://github.com/jasonsutter87"><i class="fa fa-github-square fa-2x"></i></a>     <a href="https://www.linkedin.com/in/jason-sutter-23459b1a"><i class="fa fa-linkedin-square fa-2x"></i></a></p>
+      </div>
+      <p class="Copyright">Copyright Jason Sutter &copy; 2016 - jasonanimation.net</p>
+      <p class="Copyright">CONTENT LICENSED UNDER THE CREATIVE COMMONS <a href="http://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a></p>
+
+      
+    </footer>
+  </div>
