--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -37,3 +38,21 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</div>
+
+
+<div class="footer">
+    <footer>
+      <h4 class="wrapper">JASONSUTTER</h4>
+      <div>
+    
+        <img src="../images/test.JPG" alt="Footer-Portrait">
+        <p class="wrapper">Jason is an aspiring programmer based out of San Francisco, CA. He is currently attending Devboot Camp we he is focused on development</p>
+        <p class="wrapper"><a href="https://github.com/jasonsutter87"><i class="fa fa-github-square fa-2x"></i></a>     <a href="https://www.linkedin.com/in/jason-sutter-23459b1a"><i class="fa fa-linkedin-square fa-2x"></i></a></p>
+      </div>
+      <p class="Copyright">Copyright Jason Sutter &copy; 2016 - jasonanimation.net</p>
+      <p class="Copyright">CONTENT LICENSED UNDER THE CREATIVE COMMONS <a href="http://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a></p>
+
+      
+    </footer>
+  </div>
