--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,55 +7,71 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	
 	<% if user_signed_in? %>
-		<!-- Navigation -->
+	<!-- Navigation -->
+	<div class="nav-section">
 		<nav>
 			<ul class="navigation">
-				<li id="nav-title"><a href="/blogs">JASONcoder</a></li>
-				<li style="float:right"><a href="#">Sign Out</a></li>
-				<li style="float:right"><a href="#">Account</a></li>
-				<li style="float:right"><a href="/pages/contact">Contact</a></li>
-				<li style="float:right"><a href="/pages/portfolio">Portfolio</a></li>
-				<li style="float:right"><a href="/project_eulers">Project Euler</a></li>
-				<li style="float:right"><a href="/pages/about">About</a></li>
+				<li class="title-navigation"><a href="/pages/about">JASONcoder</a></li>
+				
+        		
+
+        		<li class="little-navigation" style="float:right"><%= link_to " Logout", destroy_user_session_path, :class => "glyphicon glyphicon-log-in", :method => "delete" %></li>
+				<li class="little-navigation" style="float:right"><a href="/users/edit">Account</a></li>
+				<li class="little-navigation" style="float:right"><a class="active" href="/pages/portfolio">Portfolio</a></li>
+				<li class="little-navigation" style="float:right"><a class="active" href="/project_eulers">Project Euler</a></li>
+				<li class="little-navigation" style="float:right"><a class="active" href="/blogs">Blog</a></li>
+				<li class="little-navigation" style="float:right"><a class="active" href="/pages/about">About</a></li>
 				<li class="icon">
 					<a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
 				</li>
 			</ul>
+
 		</nav>
+	</div>
 	<!-- End Navigation /-->
 	
 	<% else %>
 	<!-- Navigation -->
+	<div class="nav-section">
 		<nav>
 			<ul class="navigation">
-				<li id="nav-title"><a href="/blogs">JASONcoder</a></li>
-				<li style="float:right"><a href="#">Sign In</a></li>
-				<li style="float:right"><a href="#">Account</a></li>
-				<li style="float:right"><a href="/pages/contact">Contact</a></li>
-				<li style="float:right"><a href="/pages/portfolio">Portfolio</a></li>
-				<li style="float:right"><a href="/project_eulers">Project Euler</a></li>
-				<li style="float:right"><a href="/pages/about">About</a></li>
+				<li class="title-navigation"><a href="/pages/about">JASONcoder</a></li>
+				
+        		
+
+        		<li class="little-navigation" style="float:right"><%= link_to "Log In", new_user_session_path %></li>
+				
+				<li class="little-navigation" style="float:right"><a class="active" href="/pages/portfolio">Portfolio</a></li>
+				<li class="little-navigation" style="float:right"><a class="active" href="/project_eulers">Project Euler</a></li>
+				<li class="little-navigation" style="float:right"><a class="active" href="/blogs">Blog</a></li>
+				<li class="little-navigation" style="float:right"><a class="active" href="/pages/about">About</a></li>
 				<li class="icon">
 					<a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
 				</li>
 			</ul>
+
 		</nav>
+	</div>
 	<!-- End Navigation /-->
+
 	
+
 	
 	<% end %>
 
 
 
 
-	
 
 	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-<%= yield %>
+
+	<%= yield %>
+	
+
+
 
 </body>
 </html>
