--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
         		
 
         		<li class="little-navigation" style="float:right"><%= link_to "Log In", new_user_session_path %></li>
-				
+				<li class="little-navigation" style="float:right"><a class="active" href="/pages/contact">Contact</a></li>
 				<li class="little-navigation" style="float:right"><a class="active" href="/pages/portfolio">Portfolio</a></li>
 				<li class="little-navigation" style="float:right"><a class="active" href="/project_eulers">Project Euler</a></li>
 				<li class="little-navigation" style="float:right"><a class="active" href="/blogs">Blog</a></li>
