--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-	<h1>Portfolio</h1>
+	<div class="header">
+    <h3>Portfolio</h3>
+  </div>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div class="footer">
