--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-	<h1>Contact</h1>
+	<div class="header">
+    <h3>Contact</h3>
+  </div>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div class="footer">
