--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -12,7 +12,7 @@
       <h4 class="wrapper">JASONSUTTER</h4>
       <div>
     
-        <img src="../images/test.JPG" alt="Footer-Portrait">
+        <img src="/images/test.JPG" alt="Footer-Portrait">
         <p class="wrapper">Jason is an aspiring programmer based out of San Francisco, CA. He is currently attending Devboot Camp we he is focused on development</p>
         <p class="wrapper"><a href="https://github.com/jasonsutter87"><i class="fa fa-github-square fa-2x"></i></a>     <a href="https://www.linkedin.com/in/jason-sutter-23459b1a"><i class="fa fa-linkedin-square fa-2x"></i></a></p>
       </div>
