--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -16,8 +16,10 @@
   <%= @blog.post %>
 </p>
 
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
+<!--
+<%= link_to 'Edit', edit_blog_path(@blog) %> | -->
 <%= link_to 'Back', blogs_path %>
+
 </div>
 <br><br><br><br><br><br><br><br><br><br><br>
 
