--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,33 +1,37 @@
 <div class="container">
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Blogs</h1>
+<div class="header">
+    <h3>Blog</h3>
+</div>
+<br><br>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Title</th>
-      <th>Post</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @blogs.each do |blog| %>
-      <tr>
-        <td><%= blog.date %></td>
-        <td><%= blog.title %></td>
-        <td><%= blog.post %></td>
-        <td><%= link_to 'Show', blog %></td>
-        <% if user_signed_in? %>
+<div class="section">
+  <p>This is a lovely space for me to keep track of my thoughts. Also this will act like a note book as I progress through coding at Devboot Camp</p>
+</div>
+  <br>
+<% @blogs.each do |blog| %>
+<div class="link row clearfix">
+<div class="section">
+<h2>
+  <%= link_to blog.title, blog %></h2>
+  <h4><small class="author">Submitted <%= time_ago_in_words(blog.created_at) %>
+    <br>
+    <% if user_signed_in? %>
           <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
           <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  </small>
+</h4>
+</div>
+<br>
+
+</div>
+<% end %>
+
+
+
 
 <br>
 <% if user_signed_in? %>
@@ -35,6 +39,7 @@
 <% end %>
 </div>
 <br>
+</div>
 
 <div class="footer">
     <footer>
