--- a/app/views/project_eulers/index.html.erb
+++ b/app/views/project_eulers/index.html.erb
@@ -1,38 +1,34 @@
-
-
 <div class="container">
-  <p id="notice"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 
-<h1>Listing Project Eulers</h1>
+<div class="header">
+    <h3>Project Euler</h3>
+</div>
+<br><br>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Title</th>
-      <th>Post</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @project_eulers.each do |project_euler| %>
-      <tr>
-        <td><%= project_euler.date %></td>
-        <td><%= project_euler.title %></td>
-        <td><%= project_euler.post %></td>
-        <td><%= link_to 'Show', project_euler %></td>
-        
-        <% if user_signed_in? %>
-          <td><%= link_to 'Edit', edit_project_euler_path(project_euler) %></td>
+<div class="section">
+  <p>This is a lovely space for me to keep track my progression through Project Euler</p>
+</div>
+  <br>
+<% @project_eulers.each do |project_euler| %>
+<div class="link row clearfix">
+<div class="section">
+<h2>
+  <%= link_to project_euler.title, project_euler %></h2>
+  <h4><small class="author">Submitted <%= time_ago_in_words(project_euler.created_at) %>
+    <br>
+    <% if user_signed_in? %>
+          <td><%= link_to 'Edit', edit_blog_path(project_euler) %></td>
           <td><%= link_to 'Destroy', project_euler, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
-        
-        
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  </small>
+</h4>
+</div>
+<br>
+
+</div>
+<% end %>
 
 <br>
 
