--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
 /* Remove margins and padding from the list, and add a black background color */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 body {
 	margin: 0;
 	font:  "Open Sans", Arial, sans-serif;
@@ -25,9 +29,6 @@ body {
 .footer {
   
 	background-color: #2c333b;
-	/*
-  position:absolute;
-  */
 	bottom: 0;
 	width: 100%;
 	text-align: center;
@@ -49,7 +50,7 @@ body {
 
 .section {
 	background-color: white;
-	padding: 20px;
+	padding: 30px;
 	padding-left: 40px;
 	padding-right: 40px;
 	color: #716e6e;
