--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -10,24 +10,20 @@
 <div class="section">
   <p>This is a lovely space for me to keep track of my thoughts. Also this will act like a note book as I progress through coding at Devboot Camp</p>
 </div>
-  <br>
-<% @blogs.each do |blog| %>
-<div class="link row clearfix">
-<div class="section">
-<h2>
-  <%= link_to blog.title, blog %></h2>
-  <h4><small class="author">Submitted <%= time_ago_in_words(blog.created_at) %>
-    <br>
-    <% if user_signed_in? %>
-          <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-          <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-  </small>
-</h4>
-</div>
 <br>
+<% @blogs.each do |blog| %>
 
-</div>
+  <div class="section">
+  <h2><%= link_to blog.title, blog %></h2>
+    <h4><small class="author">Submitted <%= time_ago_in_words(blog.created_at) %>
+      <br>
+      <% if user_signed_in? %>
+            <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
+            <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }  %></td>
+          <% end %>
+      </small></h4>
+  </div>
+  <br>
 <% end %>
 
 
