--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,7 +3,12 @@
     <h3>Contact</h3>
   </div>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div class="container">
+<div class="section">
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
+</div>
+<br><br><br><br>
 <div class="footer">
     <footer>
       <h4 class="wrapper">JASONSUTTER</h4>
