--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,19 @@ body {
 	background-color: 	#f2f2f2;
 }
 
+.button {
+    background-color: #2c333b; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    position: relative;
+    
 
+  }
 
 .footer {
   
@@ -85,6 +97,7 @@ body {
 .container{
   padding: 15px;
   padding-left: 75px;
+  padding-right: 55px
 }
 
 
