--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -35,7 +35,8 @@
 
 <br>
 <% if user_signed_in? %>
-  <%= link_to 'New Blog', new_blog_path %>
+
+  <button class="button"><%= link_to 'New Blog', new_blog_path %></button>
 <% end %>
 </div>
 <br>
