--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -3,7 +3,14 @@
     <h3>Portfolio</h3>
   </div>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<div class="container">
+<div class="section">
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
+</div>
+
+<br><br>
 <div class="footer">
     <footer>
       <h4 class="wrapper">JASONSUTTER</h4>
