--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,15 +13,11 @@
  *= require_tree .
  *= require_self
  */
-
 /* Remove margins and padding from the list, and add a black background color */
-@import "bootstrap-sprockets";
-@import "bootstrap";
-
 body {
-	margin: 0;
-	font:  "Open Sans", Arial, sans-serif;
-	background-color: 	#f2f2f2;
+  margin: 0;
+  font:  "Open Sans", Arial, sans-serif;
+  background-color:   #f2f2f2;
 }
 
 .button {
@@ -40,13 +36,16 @@ body {
 
 .footer {
   
-	background-color: #2c333b;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	color: white;
-  	list-style-type: none;
-  	margin: 0;
+  background-color: #2c333b;
+  /*
+  position:absolute;
+  */
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  color: white;
+    list-style-type: none;
+    margin: 0;
     
 
 
@@ -54,18 +53,18 @@ body {
 }
 
 .header{
-	background-color: #2c333b;
-	color: white;
-	padding: 10px;
+  background-color: #2c333b;
+  color: white;
+  padding: 10px;
 
 }
 
 .section {
-	background-color: white;
-	padding: 30px;
-	padding-left: 40px;
-	padding-right: 40px;
-	color: #716e6e;
+  background-color: white;
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  color: #716e6e;
 
 
 }
@@ -84,10 +83,10 @@ body {
 }
 
 .Copyright{
-	font-size: 10px;
+  font-size: 10px;
 }
 .wrapper{
-	 display: inline-block;
+   display: inline-block;
     width: 170px;
     height: auto;
     margin: 10px;
@@ -103,9 +102,9 @@ body {
 
 
 .footer img{
-	width: 140px;
-	height: auto;
-	border-radius: 50%; 
+  width: 140px;
+  height: auto;
+  border-radius: 50%; 
 }
 
 
@@ -120,18 +119,18 @@ ul.navigation {
     background-color: #2c333b; 
 }
 li.title-navigation {
-	font-size: 17px;
-	padding-left: 50px;
-	padding-top: 15px;
-	padding-bottom: 15px; 
+  font-size: 17px;
+  padding-left: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px; 
 }
 
 li.little-navigation {
-	font-size: 12px;
-	padding: 10px;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	color: #aaaaaa; 
+  font-size: 12px;
+  padding: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: #aaaaaa; 
 }
 
 
@@ -154,8 +153,8 @@ ul.navigation li a {
 
 
 ul.navigation li a:hover {
-	color: #aaaaaa;
-	background-color: #2c333b;
+  color: #aaaaaa;
+  background-color: #2c333b;
 }
 
 
